--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-read-more-read-less": "^1.0.7",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
