--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "json-server": "json-server --watch data.json --port 8080",
+    "mockApi": "json-server --watch data.json --port 8080",
     "lint": "next lint"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "json-server": "^1.0.0-alpha.23",
     "next": "14.1.0",
     "react": "^18",
@@ -17,6 +18,7 @@
     "react-icons": "^5.0.1",
     "react-read-more-read-less": "^1.0.7",
     "react-responsive-carousel": "^3.2.23",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
